# prometheus-http-sd

./: .bumpversion.cfg  .gitignore  README.md  pyproject.toml
.github/workflows/: release.yaml  test.yaml
docs/: debug-guide.md  metrics.txt  redis-architecture.md
prometheus_http_sd/: app.py  cli.py  config.py  const.py  consts.py  decorator.py  decorators.py  decroator.py  dispather.py  exceptions.py  mem_perf.py  metrics.py  sd.py  targets.py  validate.py  version.py
prometheus_http_sd/redis/: __init__.py  cache.py  queue.py  server.py  worker.py
prometheus_http_sd/templates/: admin.html
test/: conftest.py  test_app.py  test_genrator.py
test/app_root/cached_target/: a.py
test/app_root/echo_target/: sleep2_target.py  sleep_target.py  target.py
test/app_root/error/: error.py
test/good_root/queue/: kafka.py
test/test_dir/gateway/nginx/: edge.py
test/test_dir/queue/: zookeeper.json
test/test_generator/: test_generator.py
test/test_generator/root/json/: target.json
test/test_generator/root/yaml/: target.yaml
test/test_ignore/: test_genrator_ignore.py
test/test_ignore/good_root/gateway/nginx/: edge.py  targets.json
test/test_ignore/good_root/queue/: kafka.py
test/test_timeout/: test_selector.py  test_timeout.py
test/test_validate/: test_validate.py
test/test_validate/root_dir/: bad.yaml  good.yaml
test/test_validate/root_dir/py_should_run_test_func/: a.py
test/test_validate/root_dir/should_ignore/: a.yaml
