[tool.poetry]
name = "prometheus-http-sd"
version = "1.1.8"
description = "Prometheus HTTP SD framework."
authors = ["laixintao <laixintaoo@gmail.com>"]
readme = 'README.md'

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.1.3"
waitress = "^2.1.2"
prometheus-client = "^0.14.1"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.1.8"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.poetry.scripts]
prometheus-http-sd = 'prometheus_http_sd.cli:main'
