[tool.poetry]
name = "prometheus-http-sd"
version = "1.3.12"
description = "Prometheus HTTP SD framework."
authors = ["laixintao <laixintaoo@gmail.com>"]
readme = 'README.md'
homepage = "https://python-poetry.org://github.com/laixintao/prometheus-http-sd"


[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.1.3"
waitress = "^2.1.2"
prometheus-client = "^0.14.1"
PyYAML = "^6.0"
sentry-sdk = {extras = ["flask"], version = "^1.37.1"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.3.12"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.poetry.scripts]
prometheus-http-sd = 'prometheus_http_sd.cli:main'
