[tool.poetry]
name = "prometheus-http-sd"
version = "3.0.5"
description = "Prometheus HTTP SD framework."
authors = ["laixintao <laixintaoo@gmail.com>"]
readme = 'README.md'
homepage = "https://python-poetry.org://github.com/laixintao/prometheus-http-sd"


[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.3"
waitress = "^2.1.2"
prometheus-client = "^0.14.1"
PyYAML = "^6.0"
sentry-sdk = {extras = ["flask"], version = "0.10.2"}
redis = "^4.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=2.0.6"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.poetry.scripts]
prometheus-http-sd = 'prometheus_http_sd.cli:main'
prometheus-http-sd-server = 'prometheus_http_sd.cli:server_only'
prometheus-http-sd-worker = 'prometheus_http_sd.cli:worker_only'
